cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64'
  
Resources: 
  
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroups: 
        - !Ref mySecGrp
      Tags: 
        - Key: Name
          Value: muhProjectEC2
      UserData: !Base64 |
        #!/bin/bash
        dnf update -y
        dnf install -y httpd wget
        systemctl start httpd
        systemctl enable httpd
        cd /var/www/html
        FOLDER="https://raw.githubusercontent.com/awsdevopsteam/101-kittens-carousel-staticwebsite-ec2/main/static-web"
        wget -O index.html ${FOLDER}/index.html
        wget -O cat0.jpg ${FOLDER}/cat0.jpg
        wget -O cat1.jpg ${FOLDER}/cat1.jpg
        wget -O cat2.jpg ${FOLDER}/cat2.jpg
        systemctl restart httpd


  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: allow ssh and http connect # Required
      GroupName: mySecGrp
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80          # Başlangıç portu (80)
          ToPort: 80            # Bitiş portu (80)
          CidrIp: 0.0.0.0/0     # Herkese açık (dünya geneli) 
        - IpProtocol: tcp
          FromPort: 22          # Başlangıç portu (80)
          ToPort: 22            # Bitiş portu (80)
          CidrIp: 0.0.0.0/0     # Herkese açık (dünya geneli) 
      Tags: 
        - Key: Name
          Value: mySecGrp
    

Outputs:
  webSiteURL:
    Description: URL of the website
    Value: !Sub
      - http://${PublicIp}/
      - PublicIp: !GetAtt myWebServer.PublicIp
